使用ReAct设计模式，实现自动文档编写