@@ -27,15 +27,19 @@ public class ThreadPoolConfig {
      * @return 固定大小的线程池
      */
     @Bean(name = "embeddingExecutor", destroyMethod = "shutdown")
-    public ExecutorService embeddingExecutor(
-            @Value("${app.knowledge.embedding-concurrency:6}") int concurrency) {
-        int poolSize = Math.max(1, concurrency);
-        return Executors.newFixedThreadPool(poolSize, r -> {
-            Thread t = new Thread(r, "embedding-worker");
-            t.setDaemon(true);
-            return t;
-        });
+    public ExecutorService embeddingExecutor() {
+        return Executors.newThreadPerTaskExecutor(
+                Thread.ofVirtual().name("embedding-worker-", 0).factory());
     }
+    // public ExecutorService embeddingExecutor(
+    // @Value("${app.knowledge.embedding-concurrency:6}") int concurrency) {
+    // int poolSize = Math.max(1, concurrency);
+    // return Executors.newFixedThreadPool(poolSize, r -> {
+    // Thread t = new Thread(r, "embedding-worker");
+    // t.setDaemon(true);
+    // return t;
+    // });
+    // }
 
     /**
      * 知识库重建索引任务线程池（文档级）。
@@ -43,24 +47,47 @@ public class ThreadPoolConfig {
      * 用于异步执行“解析+分块+向量化+关键词缓存”，避免上传接口长时间阻塞。
      */
     @Bean(name = "knowledgeReindexExecutor", destroyMethod = "shutdown")
-    public ExecutorService knowledgeReindexExecutor(
-            @Value("${app.knowledge.reindex-concurrency:2}") int concurrency) {
-        int poolSize = Math.max(1, concurrency);
-        return Executors.newFixedThreadPool(poolSize, r -> {
-            Thread t = new Thread(r, "knowledge-reindex-worker");
-            t.setDaemon(true);
-            return t;
-        });
+    public ExecutorService knowledgeReindexExecutor() {
+        return Executors.newThreadPerTaskExecutor(
+                Thread.ofVirtual().name("knowledge-reindex-worker-", 0).factory());
     }
+    // public ExecutorService knowledgeReindexExecutor(
+    // @Value("${app.knowledge.reindex-concurrency:2}") int concurrency) {
+    // int poolSize = Math.max(1, concurrency);
+    // return Executors.newFixedThreadPool(poolSize, r -> {
+    // Thread t = new Thread(r, "knowledge-reindex-worker");
+    // t.setDaemon(true);
+    // return t;
+    // });
+    // }
 
     @Bean(name = "aiDocumentExecutor", destroyMethod = "shutdown")
-    public ExecutorService aiDocumentExecutor(
-            @Value("${app.ai.document-auto-write-concurrency:2}") int concurrency) {
-        int poolSize = Math.max(1, concurrency);
-        return Executors.newFixedThreadPool(poolSize, r -> {
-            Thread t = new Thread(r, "ai-document-worker");
-            t.setDaemon(true);
-            return t;
-        });
+    public ExecutorService aiDocumentExecutor() {
+        return Executors.newThreadPerTaskExecutor(
+                Thread.ofVirtual().name("ai-document-worker-", 0).factory());
     }
+    // public ExecutorService aiDocumentExecutor(
+    // @Value("${app.ai.document-auto-write-concurrency:2}") int concurrency) {
+    // int poolSize = Math.max(1, concurrency);
+    // return Executors.newFixedThreadPool(poolSize, r -> {
+    // Thread t = new Thread(r, "ai-document-worker");
+    // t.setDaemon(true);
+    // return t;
+    // });
+    // }
+
+    @Bean(name = "agentToolExecutor", destroyMethod = "shutdown")
+    public ExecutorService agentToolExecutor() {
+        return Executors.newThreadPerTaskExecutor(
+                Thread.ofVirtual().name("agent-tool-worker-", 0).factory());
+    }
+    // public ExecutorService agentToolExecutor(
+    // @Value("${app.agent.runtime.tool-concurrency:6}") int concurrency) {
+    // int poolSize = Math.max(1, concurrency);
+    // return Executors.newFixedThreadPool(poolSize, r -> {
+    // Thread t = new Thread(r, "agent-tool-worker");
+    // t.setDaemon(true);
+    // return t;
+    // });
+    // }
 }
